[package]
name = "drive_fs"
version = "0.1.0"
authors = ["Dave Fogelson <dfogelson@fishheadlabs.com>"]
edition = "2018"
include = ["Cargo.toml", "src/*.rs", "crates-io.md", "README.md", "LICENSE-MIT"]
description = "Wrapping up the basic google drive API into standard file system cli commands"

[dependencies]
env_logger = "0.7.1"
log = "0.4.8"

url = "2.1.1"

serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.44"
serde_with = "1.4.0"

hyper = "0.12.14"
tokio = "0.1.22"

wrapi = { path = "../../Wrapi" }
